--- a/index.html
+++ b/index.html
@@ -77,22 +77,30 @@
 
 <body>
     <div class="container">
-        <a class="github-icon" href="https://github.com/Muhammad-Qasim-Raza"
-            target="_blank" rel="noopener noreferrer">
+        <a class="github-icon" href="https://github.com/Muhammad-Qasim-Raza" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-github"></i>
         </a>
         <h1>Welcome to My Portfolio Showcase</h1>
         <p>Check out my all Projects & Assignments below:</p>
         <ul>
             <li><a href="https://combative-cheetah.cyclic.app/">E-Commerce-App: QASIM'S QABIL BAZAAR</a></li>
-            <li><a href="https://muhammad-qasim-raza.github.io/Todo_App_React/">Todo App</a></li>
-            <li><a href="https://muhammad-qasim-raza.github.io/Quiz_App/">Quiz App</a></li>
-            <li><a href="https://muhammad-qasim-raza.github.io/Colorlib-Courses-Clone-A-Responsive-Website/">Colorlib Courses Clone Responsive Website</a></li>
-            <li><a href="https://muhammad-qasim-raza.github.io/Architect-Template-Clone-Responsive/">Architect Template Clone Responsive Website</a></li>
+            <li><a href="https://muhammad-qasim-raza.github.io/Colorlib-Courses-Clone-A-Responsive-Website/">Colorlib
+                    Courses Clone Responsive Website</a></li>
+            <li><a href="https://muhammad-qasim-raza.github.io/FoodWagon/">FoodWagon Restaurant & Food Website</a></li>
+            <li><a href="https://muhammad-qasim-raza.github.io/Architect-Template-Clone-Responsive/">Architect Template
+                    Clone Responsive Website</a></li>
+            <li><a href="https://muhammad-qasim-raza.github.io/Figma-Design-Tere-Website/">Ride Sharing Website
+                    Clone</a></li>
             <li><a href="https://muhammad-qasim-raza.github.io/OLX-Clone-Responsive/">OLX Clone Responsive</a></li>
             <li><a href="https://muhammad-qasim-raza.github.io/Pepsi-Clone-Responsive/">Pepsi Clone Responsive</a></li>
-            <li><a href="https://muhammad-qasim-raza.github.io/Salt-n-Pepper-Restaurant-Clone-Not-Responsive/">Salt-n-Pepper-Restaurant-Clone-Not-Responsive</a></li>
-            <li><a href="https://muhammad-qasim-raza.github.io/SMIT-Web-Development-HTML-CSS-Assignments/">Some Others HTML/CSS Assignments</a></li>
+            <li><a
+                    href="https://muhammad-qasim-raza.github.io/Salt-n-Pepper-Restaurant-Clone-Not-Responsive/">Salt-n-Pepper-Restaurant-Clone-Not-Responsive</a>
+            </li>
+            <li><a href="https://muhammad-qasim-raza.github.io/TODO_APP/">Todo App</a></li>
+            <li><a href="https://muhammad-qasim-raza.github.io/Calculator/">Calculator</a></li>
+            <li><a href="https://muhammad-qasim-raza.github.io/Quiz_App/">Quiz App</a></li>
+            <li><a href="https://muhammad-qasim-raza.github.io/Todo_App_React/">Todo App with React</a></li>
+            <li><a href="https://muhammad-qasim-raza.github.io/Frozen_Yogurt_Shop/">Frozen Yogurt Shop Website</a></li>
         </ul>
     </div>
 </body>
